Closed Bug 445243 Opened 17 years ago Closed 17 years ago

js shell build failure on win32

Categories

(Core :: JavaScript Engine, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: graydon, Unassigned)

References

Details

Attachments

(1 file)

Currently the standalone js shell doesn't want to build on win32. A few minor errors. This patch fixes them on my machine.
Attachment #329569 - Flags: review?(crowder)
Comment on attachment 329569 [details] [diff] [review] patch to correct build failures Thanks!
Attachment #329569 - Flags: review?(crowder) → review+
Committed in revision b87a131fa008.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: