bug 445243, fix standalone js shell build on windows, r=crowder