js/src/rules.mk
@@ -96,7 +96,7 @@ $(OBJDIR)/%.obj: %.cpp %.h
 
 $(OBJDIR)/jsinterp.obj: jsinterp.cpp jsinterp.h
 	@$(MAKE_OBJDIR)
-	$(CXX) -Fo$(OBJDIR)/ -c $(INTERP_CFLAGS) $(JSDLL_CFLAGS) jsinterp.c
+	$(CXX) -Fo$(OBJDIR)/ -c $(INTERP_CFLAGS) $(JSDLL_CFLAGS) jsinterp.cpp
 
 $(OBJDIR)/%.obj: %.cpp
 	@$(MAKE_OBJDIR)
